# DGApy

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  CITATION.cff  LICENSE  NOTES.md  README.md  dga_bib.md  pylintrc  requirements.txt  setup.cfg  setup.py
LambdaDga/: BrillouinZone.py  Depricated.py  EliashbergEquation.py  FourPoint.py  Hk.py  Hr.py  Indizes.py  LambdaCorrection.py  LambdaDga.py  MpiAux.py  Output.py  PairingVertex.py  Plotting.py  RealTime.py  SDE.py  SubmitDga.py  TestFile.py  TwoPoint.py  w2dyn_aux.py
LocalScripts/: PostProc.py
VSCScripts/: MaxEntDgaSigmaBZKPath.py
analysis/: BubbleSusceptibility.py  TightBindingBubbleSusceptibility.py
config_templates/: dga_config.yaml
docs/: conf.py  index.rst  requirements.txt
input/: 2DSquare_tp_-0.25_tpp_0.12_Nk_200_Nkz001.hk  2dhubbard_t_-0.389093_tp_-0.25153112494956215_tpp_0.0_Nk_016_Nkz001.hk  2dhubbard_t_-0.389093_tp_0.097869_tpp_0.0_Nk_016_Nkz001.hk  2dhubbard_t_0.25_tp_-0.0_tpp_0.0_Nk_200_Nkz001.hk  2dhubbard_t_0.389093_tp_-0.25153112494956215_tpp_0.0_Nk_016_Nkz001.hk  2dhubbard_t_0.389093_tp_-0.25153112494956215_tpp_0.11974515090222645_Nk_200_Nkz001.hk  2dhubbard_t_0.504079_tp_-0.0_tpp_0.0_Nk_080_Nkz001.hk  2dhubbard_t_0.504079_tp_-0.1021288329805447_tpp_0.0905056548675902_Nk_080_Nkz001.hk  2dhubbard_t_0.504079_tp_-0.1021288329805447_tpp_0.0905056548675902_Nk_200_Nkz001.hk  2dhubbard_t_0.504079_tp_-0.1021288329805447_tpp_0.0_Nk_080_Nkz001.hk  2dhubbard_t_0.504079_tp_-0.1021288329805447_tpp_0.12829_Nk_080_Nkz001.hk  2dhubbard_t_1.0_tp_-0.0_tpp_0.0_Nk_064_Nkz001.hk  2dhubbard_t_1.0_tp_-0.172_tpp_0.0_Nk_200_Nkz001.hk  2dhubbard_t_1.0_tp_-0.1775_tpp_0.11_Nk_200_Nkz001.hk  2dhubbard_t_1.0_tp_-0.178_tpp_0.0_Nk_200_Nkz001.hk  2dhubbard_t_1.0_tp_-0.179_tpp_0.0_Nk_200_Nkz001.hk  2dhubbard_t_1.0_tp_-0.1809_tpp_0.1089_Nk_200_Nkz001.hk  2dhubbard_t_1.0_tp_-0.184_tpp_0.0_Nk_200_Nkz001.hk  2dhubbard_t_1.0_tp_-0.18_tpp_0.0_Nk_200_Nkz001.hk  2dhubbard_t_1.0_tp_-0.18_tpp_0.1066_Nk_032_Nkz001.hk  2dhubbard_t_1.0_tp_-0.18_tpp_0.1066_Nk_064_Nkz001.hk  2dhubbard_t_1.0_tp_-0.18_tpp_0.1066_Nk_100_Nkz001.hk  2dhubbard_t_1.0_tp_-0.18_tpp_0.1066_Nk_200_Nkz001.hk  2dhubbard_t_1.0_tp_-0.18_tpp_0.108_Nk_200_Nkz001.hk  2dhubbard_t_1.0_tp_-0.25_tpp_0.12_Nk_064_Nkz001.hk  2dhubbard_t_1.0_tp_-0.2_tpp_0.1_Nk_064_Nkz001.hk  2dhubbard_tp_-0.0_tpp_0.0_Nk_200_Nkz001.hk  2dhubbard_tp_-0.15_tpp_0.075_Nk_200_Nkz001.hk  2dhubbard_tp_-0.1_tpp_0.0_Nk_200_Nkz001.hk  2dhubbard_tp_-0.1_tpp_0.1_Nk_200_Nkz001.hk  2dhubbard_tp_-0.2_tpp_0.1_Nk_024_Nkz001.hk  2dhubbard_tp_-0.2_tpp_0.1_Nk_032_Nkz001.hk  2dhubbard_tp_-0.2_tpp_0.1_Nk_080_Nkz001.hk  2dhubbard_tp_-0.2_tpp_0.1_Nk_200_Nkz001.hk  2dhubbard_tp_-0.35_tpp_0.12_Nk_200_Nkz001.hk  2dhubbard_tp_-0.3_tpp_0.12_Nk_200_Nkz001.hk  2dhubbard_tp_-0.4_tpp_0.12_Nk_200_Nkz001.hk  Ba2CuO4_plane1_nkx200_nky200_nkz1.hk  CheckTightBindingParameters.py  CollectSigmaMotoharu.py  (+7 more)
lrtc2dga/: RunLRTC.py  config.lrtc  lscat_template  ltb_dga.py  scattering_file.hdf5  tight_binding_tp-0.2_tpp0.1.txt
postproc/: MaxEntDGA.py  (+38 more)
(+249 files in other folders)
