[metadata]
name = dga
version = 1.0.1
author = Paul Worm
author_email = pworm42@gmail.com
description = A python based framework for calculations using the dynamical vertex approximation
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.7
install_requires =
    numpy
    matplotlib
    h5py
    mpi4py
    ruamel.yaml

setup_requires =
    setuptools >=30.3.0
    wheel

[options.packages.find]
where = src
include = dga*

[options.entry_points]
console_scripts =
    dga = dga.cli:main