[metadata]
name = dga
version = 1.0.1
author = Paul Worm
author_email = pworm42@gmail.com
description = A python based framework for calculations using the dynamical vertex approximation
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 3.7
install_requires =
    numpy
    scipy
    pandas
    matplotlib
    h5py
    mpi4py
    ruamel.yaml
    psutil
    multimethod
    ana-cont

setup_requires =
    Cython
    setuptools >=30.3.0

[options.packages.find]
where = src
include = dga*, postproc*

[options.entry_points]
console_scripts =
    dga = dga.cli:main
    dga_main = dga.dga_main
    dga_max_ent = dga.dga_max_ent:main
    swk_analysis = postproc.plot_siwk_cont:main