[metadata]
name = dga
version = 2.1.0
author = Paul Worm
author_email = pworm42@gmail.com
description = A python based framework for calculations using the dynamical vertex approximation
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[build-system]
requires = ["setuptools"]

[options]
package_dir =
    = src
    tests = tests
packages = find:
python_requires = >= 3.8
install_requires =
    numpy >= 1.20
    scipy >= 1.10.0
    pandas >= 2.0.0
    matplotlib
    h5py >= 3.10.0
;    mpi4py
    ruamel.yaml
    psutil
    multimethod
    pylint
    coverage
    coverage-badge

[options.packages.find]
where = src
include = dga*, postproc*, ana_cont*, test_util*, cli*

[options.entry_points]
console_scripts =
    dga = dga.cli:main
    dga_main = dga.dga_main:main
    dga_max_ent = dga.dga_max_ent:main
    swk_analysis = postproc.plot_siwk_cont:main
    sym1b = cli.sym1b:main
    dga_lint = cli.dga_cli_testing:test_linting
    dga_unit_test = cli.dga_cli_testing:run_unit_tests
    dga_test = cli.dga_cli_testing:main
    dga_dc = cli.dga_config_generator:main
